# Distributed-AI-System

./: README.md
client/: CMakeLists.txt  client.cpp  ocr_service.proto
server/: CMakeLists.txt  server.cpp
